# OCR-icelandic

./: .gitignore  .pre-commit-config.yaml  README.md  Smol_VLM_FT.ipynb  generate_synthetic_data.slurm  prepare_data.py  pyproject.toml  requirements.txt  smol_vlm_inference.ipynb  train_smolVLM.slurm  utils.py
notebooks/: Smol_VLM_FT.ipynb
scripts/: build_gold_data.py  helpers.py  merge_text_model_to_idefics.py  prepare_data.py  smol_vlm_ft.py  train_llm.py  webui.py
slurm/: generate_synthetic_data.slurm  train_smolVLM.slurm  train_smolVLM_LLM.slurm
